--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,8 +23,16 @@ a:focus {
   background-color: #F5DA55;
   border-top: 2px solid #333;
 }
-.page-head .logo-img {
-  height: 35px;
+@media screen and (min-width: 1000px) {
+  .page-head .logo-img {
+    height: 35px;
+  }
+}
+@media screen and (max-width: 999px) {
+  .page-head .logo-img {
+    height: 30px;
+    margin-top: 2px;
+  }
 }
 .page-head .head-box {
   display: flex;
@@ -56,6 +64,15 @@ a:focus {
 }
 .page-head .head-box .head-item .link-item:hover {
   text-decoration: none;
+}
+.page-head .head-box .drop-ul {
+  position: relative;
+}
+.page-head .head-box .drop-ul ul {
+  margin: 0px;
+}
+.page-head .head-box .drop-ul ul li {
+  color: #333;
 }
 .content-box {
   padding: 5px 15px;
@@ -94,7 +111,7 @@ a:focus {
   height: 35px;
   width: 40px;
   background-color: #F5DA55;
-  background-image: url(../img/icon/menu.png);
+  background-image: url(../images/icon/menu.png);
   background-size: 75%;
   background-position: 50%;
   background-repeat: no-repeat;
@@ -102,4 +119,55 @@ a:focus {
 }
 .btn-menu:hover {
   background-color: #ebd054;
+}
+.banner-box {
+  width: 100%;
+  background-image: url(../images/banner-2.jpg);
+}
+@media screen and (min-width: 1000px) {
+  .banner-box {
+    height: 450px;
+    background-size: 100%;
+    background-position: center 0;
+    background-repeat: repeat;
+    text-align: center;
+  }
+  .banner-box .banner-title {
+    color: #F5DA55;
+    font-size: 57px;
+    padding-top: 170px;
+    text-shadow: 0px 1px 12px #333;
+  }
+  .banner-box .banner-subtxt {
+    font-size: 20px;
+    margin: 10px 0px;
+    text-shadow: 0px 1px 12px #333;
+  }
+}
+@media screen and (max-width: 999px) {
+  .banner-box {
+    background-size: 100%;
+    background-position: center 0;
+    background-repeat: repeat;
+    text-align: center;
+  }
+  .banner-box .banner-title {
+    color: #F5DA55;
+    font-size: 26px;
+    text-shadow: 0px 1px 12px #333;
+    padding-top: 32px;
+    padding-bottom: 4px;
+  }
+  .banner-box .banner-subtxt {
+    font-size: 15px;
+    padding-top: 10px;
+    text-shadow: 0px 1px 12px #333;
+    padding-bottom: 51px;
+  }
+}
+.f-yellow {
+  color: #F5DA55;
+}
+.f-w {
+  color: #fff;
 }
