--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -36,10 +36,14 @@ html(lang="en")
                 .head-left
                     .head-img
                         img.logo-img(src="/images/logo.png", alt="logo here")
-                
                 .head-right
-                    .head-item
-                        button.btn.btn-menu
+                    .head-item#btn-menubox
+                        //button.btn.btn-menu
         section.page-banner
-        section.page-body
+            // pc
+            .banner-box
+                p.banner-title Welcome Titan Blog !
+                p.banner-subtxt.f-w 一个简约的网站
+        section.page-body(style="height:1600px")
         fonter.page-foot
+        script(src="/javascripts/home/index.js")
