--- a/public/css/main.less
+++ b/public/css/main.less
@@ -65,11 +65,37 @@ a:hover, a:focus {
       }
     }
     .drop-ul{
-      position: relative;
+      position: absolute;
+      top: 47px;
+      background-color: #fff;
+      box-shadow: 1px 3px 10px #333;
+      right: 0px;
+      min-width: 150px;
       ul{
         margin: 0px;
+        list-style: none;
+        padding: 0;
+        width: 100%;
+        text-align: left;
         li{
           color:#333;
+          list-style: none;
+          padding: 10px 15px;
+          color: #333;
+          list-style: none;
+          padding: 10px 15px;
+          border-top: 1px solid #cbcbcb;
+          a{
+            color:@dark;
+            font-size: 14px;
+            display: block;
+          }
+        }
+        li:active{
+          background-color: #cbcbcb;
+        }
+        li:first-child{
+          border-top:0px;
         }
       }
 
