--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -8,36 +8,7 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         script(src="/javascripts/sea.js")
     body
-        header.page-head
-            // pc
-            .content-box.head-box.for-pc
-                .head-left
-                    .head-img
-                        img.logo-img(src="/images/logo.png", alt="logo here")
-
-                    .head-item(style="margin-left:35px;")
-                        a.link-item(href="#", target="_blank") 首页
-
-                    .head-item
-                        a.link-item(href="#", target="_blank") 博客
-
-                    .head-item
-                        a.link-item(href="#", target="_blank") 相册
-
-                    .head-item
-                        a.link-item(href="#", target="_blank") 随笔
-
-                .head-right
-                    .head-item
-                        a.link-item(href="https://github.com/SinanJS/sinan-blog", target="_blank") GitHub
-            // 手机
-            .content-box.head-box.for-phone
-                .head-left
-                    .head-img
-                        img.logo-img(src="/images/logo.png", alt="logo here")
-                .head-right
-                    .head-item#btn-menubox
-                        //button.btn.btn-menu
+        div#header-box
         section.page-banner
             // pc
             .banner-box
