--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -1,10 +1,12 @@
 doctype html
 html(lang="en")
     head
-        title Welcome SinanBlog!
+        title TitanBlog
         meta(charset="UTF-8")
         link(rel="stylesheet", href="/css/main.css")
         meta(name="viewport", content="width=device-width, initial-scale=1")
+        //link(rel="apple-touch-icon" href="/custom_icon.png")
+        link(rel="apple-touch-icon-precomposed" href="./images/apple-touch-icon.png")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         script(src="/javascripts/sea.js")
     body
