--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -5,7 +5,7 @@ html(lang="en")
         meta(charset="UTF-8")
         link(rel="stylesheet", href="/css/main.css")
         meta(name="viewport", content="width=device-width, initial-scale=1")
-        //link(rel="apple-touch-icon" href="/custom_icon.png")
+        link(rel="shortcut icon" href="./images/icon.ico")
         link(rel="apple-touch-icon-precomposed" href="./images/apple-touch-icon.png")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         script(src="/javascripts/sea.js")
