--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,17 +166,19 @@ a:focus {
 .btn-menu:hover {
   background-color: #ebd054;
 }
+.page-banner {
+  background-size: 100%;
+  background-position: center 0;
+  background-image: url(../images/banner-2.jpg);
+  background-repeat: repeat;
+}
 .banner-box {
   width: 100%;
-  background-image: url(../images/banner-2.jpg);
 }
 @media screen and (min-width: 1000px) {
   .banner-box {
-    height: 450px;
-    background-size: 100%;
-    background-position: center 0;
-    background-repeat: repeat;
     text-align: center;
+    height: 450px;
   }
   .banner-box .banner-title {
     color: #F5DA55;
@@ -209,6 +211,58 @@ a:focus {
     padding-top: 10px;
     text-shadow: 0px 1px 12px #333;
     padding-bottom: 51px;
+  }
+}
+.title-box {
+  width: 100%;
+}
+@media screen and (min-width: 1000px) {
+  .title-box {
+    height: 230px;
+    text-align: left;
+    width: 1200px;
+    margin: 0 auto;
+  }
+  .title-box .banner-title {
+    color: #F5DA55;
+    font-size: 37px;
+    padding-top: 60px;
+    text-shadow: 0px 1px 12px #333;
+  }
+  .title-box .banner-subtxt {
+    font-size: 20px;
+    text-shadow: 0px 1px 12px #333;
+    line-height: 2;
+  }
+  .title-box .date-subtxt {
+    font-size: 17px;
+    line-height: 1;
+    text-shadow: 0px 1px 12px #333;
+  }
+}
+@media screen and (max-width: 999px) {
+  .title-box {
+    background-size: 100%;
+    background-position: center 0;
+    background-repeat: repeat;
+    text-align: center;
+  }
+  .title-box .banner-title {
+    color: #F5DA55;
+    font-size: 26px;
+    text-shadow: 0px 1px 12px #333;
+    padding-top: 32px;
+    padding-bottom: 4px;
+  }
+  .title-box .banner-subtxt {
+    font-size: 20px;
+    text-shadow: 0px 1px 12px #333;
+    line-height: 2;
+  }
+  .title-box .date-subtxt {
+    font-size: 17px;
+    line-height: 1;
+    text-shadow: 0px 1px 12px #333;
   }
 }
 .f-yellow {
