--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -1,13 +1,13 @@
 doctype html
 html(lang="en")
     head
-        title Welcome SinanBlog!
+        title #{fileName}-TitanBlog
         meta(charset="UTF-8")
-        link(rel="shortcut icon" href="./images/icon.ico")
-        link(rel="apple-touch-icon-precomposed" href="./images/apple-touch-icon.png")
         link(rel="stylesheet", href="/css/main.css")
         link(rel="stylesheet", href="/css/prism.css")
         meta(name="viewport", content="width=device-width, initial-scale=1")
+        link(rel="shortcut icon" href="/images/icon.ico")
+        link(rel="apple-touch-icon-precomposed" href="./images/apple-touch-icon.png")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         script(src="/javascripts/sea.js")
     body
