--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -18,7 +18,9 @@ html(lang="en")
             //p #{fileName}#{createTime}
             div.md-preview !{html}
             div.bd-other
-        fonter.page-foot
+        footer.page-foot
+
+
     script(type="text/javascript").
             seajs.config({
                 base: "../javascripts",
