--- a/public/css/main.less
+++ b/public/css/main.less
@@ -67,8 +67,9 @@ a:hover, a:focus {
     }
     .head-item {
       flex-shrink: 0;
-      width: 65px;
+      min-width: 45px;
       text-align: center;
+      padding:0 10px;
       .link-item {
         color: #333;
         font-size: 17px;
@@ -505,7 +506,8 @@ a:hover, a:focus {
     .about-title {
       font-size: 1.3rem;
     }
-    .logo-fff{
+
+    .logo-fff {
       display: none;
     }
   }
@@ -514,9 +516,11 @@ a:hover, a:focus {
       text-align: center;
       font-size: 1rem;
     }
-    .ICP{
+
+    .ICP {
       font-size: 1rem;
     }
+
     .logo-fff {
       text-align: center;
       img {
@@ -556,5 +560,88 @@ a:hover, a:focus {
       }
 
     }
+  }
+}
+
+a:focus {
+  outline: none;
+}
+.index-body{
+  display: flex;
+}
+.article-list {
+  @media screen and (min-width: 1000px) {
+    width: 800px;
+    flex-wrap: nowrap;
+  }
+  @media screen and (max-width: 1000px){
+
+  }
+  .list-item {
+    padding: 16px 0;
+    border-bottom: 1px solid #F1F1F1;
+  }
+  .article-a {
+    font-size: 20px;
+    color: #333;
+    line-height: 2;
+  }
+  .article-a:hover {
+    color: #333;
+    text-decoration: underline;
+  }
+  .article-a {
+    text-decoration: none;
+  }
+  .article-gist {
+    padding-bottom: 10px;
+    display: flex;
+    line-height:1.5;
+    color: #777;
+    img {
+      background-image:url("/images/icon/loading.gif");
+      background-position: 50%;
+      background-repeat: no-repeat;
+      background-size: 45%;
+      @media screen and (min-width: 1000px) {
+        max-width: 150px;
+        min-width: 150px;
+        min-height:120px;
+        margin: 5px 10px 10px 0;
+      }
+      @media screen and (max-width: 1000px){
+        min-width: 100px;
+        min-height: 80px;
+        width: 100px;
+        height: 80px;
+        margin: 5px 10px 10px 0;
+      }
+    }
+  }
+  .tag-row {
+    display: flex;
+    margin-top: 5px;
+  }
+
+  .small-tag {
+    flex-wrap: nowrap;
+    background: @yellow;
+    margin-right: 10px;
+    padding: 2px 5px;
+    border-radius: 3px;
+  }
+
+  .author-tag {
+    flex-wrap: nowrap;
+    padding: 2px 5px;
+    border-radius: 3px;
+    color: @yellow;
+  }
+
+  .time-tag {
+    flex-wrap: nowrap;
+    padding: 2px 5px;
+    border-radius: 3px;
+    color: #ffffff;
   }
 }
