--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -16,8 +16,9 @@ html(lang="en")
             .banner-box
                 p.banner-title Welcome Titan Blog !
                 p.banner-subtxt.f-w 一个简约的网站
-        section.page-body(style="height:1600px")
-        fonter.page-foot
+        section.page-body.content-box
+
+        footer.page-foot
     script(type="text/javascript").
             seajs.config({
                 base: "./javascripts",
