--- a/public/css/main.less
+++ b/public/css/main.less
@@ -354,6 +354,7 @@ a:hover, a:focus {
     .md-preview {
       width: 800px;
       flex-wrap: nowrap;
+      padding: 20px 0;
     }
 
     .bd-other {
@@ -365,6 +366,9 @@ a:hover, a:focus {
     display: block;
     .bd-other {
       display: none;
+    }
+    .md-preview{
+      padding: 20px 0;
     }
   }
 }
