--- a/public/css/main.less
+++ b/public/css/main.less
@@ -608,9 +608,9 @@ a:focus {
       background-repeat: no-repeat;
       background-size: 45%;
       @media screen and (min-width: 1000px) {
-        max-width: 150px;
-        min-width: 150px;
-        min-height:120px;
+        width: 200px;
+        max-height: 150px;
+        min-height: 80px;
         margin: 5px 10px 10px 0;
       }
       @media screen and (max-width: 1000px){
